[package]
name = "sdr"
description = "Rust SDR DSP functionality"
version = "0.5.2"
authors = ["Adam Greig <adam@adamgreig.com>"]
homepage = "https://github.com/adamgreig/sdr-rs"
repository = "https://github.com/adamgreig/sdr-rs"
readme = "README.md"
keywords = ["sdr", "dsp"]
license = "MIT"

[dependencies]
num = "*"

[dev-dependencies]
time = "*"
